# gnote

./: configure.ac  tags
data/: org.gnome.gnote.gschema.xml
data/icons/: tags
src/: Makefile.am  addininfo.cpp  debug.cpp  iactionmanager.hpp  note.cpp  noteaddin.cpp  notebase.cpp  notemanager.cpp  notemanagerbase.cpp  preferencesdialog.cpp  recentchanges.cpp  recentchanges.hpp  searchnoteswidget.cpp  tag.cpp
src/addins/: Makefile.am
src/addins/repo/: Makefile.am  gitcli.cpp  gitcli.hpp  repo.cpp  repo.desktop.in.in  repo.hpp  repopreferences.cpp  repopreferences.hpp  repopreferencesfactory.hpp
src/notebooks/: notebook.cpp
src/sharp/: dynamicmodule.cpp  modulemanager.cpp
